# opengl-rendering-engine

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  TODO.md
asset/: testCube.glb
asset/block_island/: License.txt  prototype_scene_block_island.glb
demos/: rendering_output.webm
glad/: glad.c  glad.h
include/: NOTES.md  buffer_management_system.h  components.h  ecs_hierarchy_traverser.h  engine_data_structures(outdated).h  engine_data_structures.h  gltf_flat_parser.h  gpu_buffer_manager.h  gpu_texture_manager.h  hierarchy_traverser_flat.h  renderer.h  shader_code.h  shader_manager.h  skin_animation_system.h  transformation_system.h  vertex_attribute_repacker.h  vertex_format_manager.h
include/animation/: animation_data_structures.h  animation_system.h  bone_animation_system.h  skeletal_animation_manager.h  skeletal_animation_solver.h  skin_animation_system.h
include/engine/: engine_core.h  engine_loader.h
include/low-level/: gpu_buffer_manager.h  gpu_buffer_sub_bump_allocator.h  gpu_buffer_transfer_manager.h  gpu_material_system.h  gpu_texture_manager.h  rendering_system_data_types.h  shader_code.h  shader_code_generator.h  shader_manager.h  vertex_format_helper.h  vertex_format_manager.h  world_vertex_buffer_management_system.h
include/model-loading/: data_convertor.h  gltf_animation_extractor.h  gltf_attribute_extractor.h  gltf_intermediate_mapper.h  model_loading_data_structure.h  vertex_attributes_repacker.h
include/rendering-system/: render_system.h  ui_renderer.h  world_renderer.h
include/ui/include/: ui_renderer.h
include/ui/include/builder/: ui_base_builder.h  ui_builder.h  ui_element.h
include/ui/include/core/: ui_component.h  ui_core_data_structures.h  ui_core_system.h  ui_shader_code.h  ui_shader_manager.h  ui_system.h
include/ui/include/systems/: performance_monitor_system.h  ui_mesh_system.h  ui_transformation_system.h
include/ui/include/utils/: geometry_generator.h
src/: buffer_management_system.cpp  camera.cpp  common_header_imp.cpp  ecs_hierarchy_traverser.cpp  gltf_animation_extractor.cpp  gltf_flat_parser.cpp  gpu_buffer_manager.cpp  gpu_texture_manager.cpp  hierarchy_traverser_flat.cpp  main.cpp  renderer.cpp  skin_animation_system.cpp  transformation_system.cpp  vertex_attribute_repacker.cpp  vertex_format_manager.cpp
src/animation/: animation_system.cpp  bone_animation_system.cpp  keyframe_animation_manager.cpp  skeletal_animation_manager.cpp  skeletal_animation_solver.cpp
src/engine/: engine_core.cpp  engine_loader.cpp
src/low-level/: gpu_buffer_manager.cpp  gpu_buffer_sub_bump_allocator.cpp  gpu_material_system.cpp  gpu_texture_manager.cpp  shader_code_generator.cpp  shader_manager.cpp  vertex_attributes_repacker.cpp  vertex_format_helper.cpp  vertex_format_manager.cpp  world_vertex_buffer_management_system.cpp
src/model-loading/: data_convertor.cpp  gltf_animation_extractor.cpp  gltf_attribute_extractor.cpp  gltf_flat_parser.cpp  gltf_intermediate_mapper.cpp  vertex_attribute_repacker.cpp  vertex_attributes_repacker.cpp
src/rendering-system/: render_system.cpp  world_renderer.cpp
src/ui/src/: ui_renderer.cpp
src/ui/src/builder/: ui_base_builder.cpp  ui_builder.cpp  ui_element.cpp  ui_graph_builder.cpp  ui_panel_builder.cpp  ui_text_label_builder.cpp
src/ui/src/core/: ui_core_system.cpp  ui_system.cpp
src/ui/src/systems/: performance_monitor_system.cpp  ui_layout_system.cpp  ui_mesh_system.cpp  ui_transformation_system.cpp  ui_vertex_buffer_management_system.cpp
src/ui/src/utils/: geometry_generator.cpp
ui/include/: hierarchy_builder.h  performance_monitor_system.h  ui_component.h  ui_graph_system.h  ui_material_system.h  ui_mesh_generation_system.h  ui_renderer.h  ui_shader_code.h  ui_transformation_system.h  ui_vertex_buffer_system.h  vertex_buffer_upload_manager.h
ui/include/builder/: ui_base_builder.h  ui_builder.h  ui_graph_builder.h  ui_panel_builder.h
ui/src/: geometry_generator.cpp  hierarchy_builder.cpp  performance_monitor_system.cpp  ui_mesh_generation_system.cpp  ui_renderer.cpp  ui_transformation_system.cpp  ui_vertex_buffer_system.cpp  vertex_buffer_upload_manager.cpp
ui/src/builder/: ui_base_builder.cpp  ui_builder.cpp  ui_graph_builder.cpp  ui_panel_builder.cpp
